# django-flowbite

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  package-lock.json  package.json  pyproject.toml  tailwind.config.js
.github/workflows/: release.yaml
sample_project/cfehome/: settings.py  urls.py  views.py
src/django_flowbite/: __init__.py  main.py  rav.yaml
src/django_flowbite/staticfiles/tailwind/: input.css
src/django_flowbite/staticfiles/theme/: theme.min.css
src/django_flowbite/templates/base/: css.html
src/django_flowbite/templates/dashboard/: base.html  main.html  nav.html
src/django_flowbite/templates/flowbite-blocks/advanced-tables/: table-with-products.html
src/django_flowbite/templates/flowbite-blocks/crud-create-modals/: default-modal.html
src/django_flowbite/templates/flowbite-blocks/crud-update-modals/: default-modal.html
src/django_flowbite/templates/flowbite-blocks/order-summary/: default-order-summary.html
src/django_flowbite/templates/flowbite-blocks/orders-overview/: default-order-list.html
src/django_flowbite/templates/flowbite-blocks/payment-forms/: default-payment-form.html
src/django_flowbite/templates/flowbite-blocks/read-sections/: default-read-section.html
src/django_flowbite/templates/flowbite-blocks/testimonials/: blockquote-example.html
src/django_flowbite/templates/flowbite-blocks/update-forms/: default-forms.html
