[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-flowbite"
version = "0.0.2"
description = "A Django package providing Flowbite components and templates"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: Django",
]
dependencies = [
    "rav>=0.1.1",
]

[project.urls]
Homepage = "https://github.com/yourusername/django-flowbite"
Repository = "https://github.com/yourusername/django-flowbite"

[tool.hatch.build.targets.wheel]
packages = ["src/django_flowbite"]
only-include = ["src/django_flowbite"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "README.md",
    "pyproject.toml",
    "LICENSE",
]
